platform/backstage/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-postgresql
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage-postgresql
  template:
    metadata:
      labels:
        app: backstage-postgresql
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        image: postgres:14.22-trixie
        securityContext:
          runAsUser: 999
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: backstage-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backstage-postgresql
  namespace: backstage
spec:
  ports:
  - port: 5432
  selector:
    app: backstage-postgresql
