platform/backstage/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
spec:
  parentRefs:
  - name: external-http
    namespace: kube-system
    sectionName: https
  hostnames:
  - "backstage.hannesalbeiro.com"
  rules:
  - backendRefs:
    - name: backstage
      port: 7007
